# SkiaDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yjy/skiaapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/yjy/skiaapplication/: MainActivity.java  SkiaCanvasView.java  SkiaUtils.java  SkiaView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yjy/skiaapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
